--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
     password: ${DATABASE_PASSWORD}
     properties:
       ssl: true
+      sslMode: VERIFY_CA
+      sslRootCert: root.pem
+      sslCert: server.pem
+      sslKey: key.pem
